Fixed card overwrite the element colors, add margin when button floated, no wrap for vertical menu.

--- a/src/partials/collections/_menu.sass
+++ b/src/partials/collections/_menu.sass
@@ -190,7 +190,7 @@
 
 
 .ts.menu
-  white-space: nowrap
+  //white-space: nowrap
   overflow-x : auto
 
 
@@ -301,7 +301,7 @@
   &.vertical
     +block
 
-    white-space: nowrap
+    //white-space: nowrap
     overflow-x : hidden
     overflow-y : auto
 
