--- a/src/partials/elements/_button.sass
+++ b/src/partials/elements/_button.sass
@@ -340,7 +340,24 @@
 
   &.fluid
     width: 100%
-
+  
+  
+  
+  // [&] Floated
+  //
+  // 浮動置左或置右。
+  
+  &.floated
+    +x-margin(0)
+    
+    &.right
+      +x-margin($margin / 2, x)
+      float: right
+  
+    &.left
+      +x-margin(x, $margin / 2)
+      float: left
+  
 
 
   // [&] Compact
